<?xml version="1.0" encoding="utf-8"?>
<resources>

    // ActionBar
    <string name="app_name">Listen With Me!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_connect">Connect</string>

    <string name="action_connect">Connect to the stream</string>
    <string name="action_broadcast">Broadcast</string>
    <string name="action_add_to_queue">Add to playback queue</string>
    <string name="action_remove_from_queue">Remove from playback queue</string>
    <string name="action_shuffle">Shuffle all</string>

    <string name="btn_broadcast">Broadcast</string>
    <string name="btn_listen">Listen</string>
    <string name="artists_list_item_caption_albums">Albums:</string>
    <string name="now_playing">Now playing</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="now_playing_bar_header">Now playing:</string>

    <string name="actionbar_title_songs">Songs</string>
    <string name="actionbar_title_albums">Albums</string>
    <string name="actionbar_title_artists">Artists</string>

    <string name="actionbar_title_queue">Queue</string>


    // ** Preferences **
    <string name="pref_header_ap">Station settings</string>

    <string name="title_ap_name_preference">Station name</string>
    <string name="summary_ap_name_preference">Give name to your local station</string>

    <string name="title_ap_password_preference">Station password</string>
    <string name="summary_ap_password_preference">Set your station\'s password</string>

    <string name="title_ap_clients_can_manage_preference">Clients can manage station playback</string>
    <string name="summary_ap_clients_can_manage_preference">Use it with caution(and only with your friends)</string>


    <string name="pref_header_app">Application settings</string>
    <string name="title_app_always_local">Always start a local player</string>
    <string name="summary_app_always_local">Select this if you don\'t want to see a start screen</string>


    // Start activity
    <string name="my_music">My music</string>
    <string name="stations_around">Stations around</string>

    // SongsListFragment
    <string name="no_songs_found">No songs found.</string>
    <string name="unknown_artist">Unknown artist</string>

    // AlbumsListFragment
    <string name="no_albums_found">No albums found.</string>

    // ArtistsListFragment
    <string name="no_artists_found">No artists found.</string>

    // QueueFragment
    <string name="queue_is_empty">Queue is empty.</string>

    // PlaybackFragment
    <string name="waiting_for_server">Waiting for station...</string>

    // AlbumInfoActivity
    <string name="songs_count_title">Songs:</string>
    <string name="year_title">Year:</string>
    <string name="year_unknown">UNKNOWN</string>
    <string name="album_added_to_queue">Album added to the queue</string>
    <string name="song_added_to_queue">Song added to the queue</string>
    <string name="song_removed_from_queue">Song removed from queue</string>

    // Font names
    <string name="FONT_ROBOTO_REGULAR">fonts/Roboto-Regular.ttf</string>
    <string name="FONT_ROBOTO_BOLD">fonts/Roboto-Bold.ttf</string>
    <string name="FONT_ROBOTO_LIGHT">fonts/Roboto-Light.ttf</string>
    <string name="FONT_ROBOTO_THIN">fonts/Roboto-Thin.ttf</string>
    <string name="FONT_ROBOTO_LIGHT_ITALIC">fonts/Roboto-LightItalic.ttf</string>
    <string name="FONT_ROBOTO_THIN_ITALIC">fonts/Roboto-ThinItalic.ttf</string>
    <string name="FONT_LECKERELI_ONE_REGULAR">fonts/LeckerliOne-Regular.ttf</string>

    // Navigation Drawer titles
    <string-array name="drawer_items">
        <item>@string/local_music</item>
        <item>Stations around</item>
    </string-array>

    // Navigation Drawer icons
    <string-array name="drawer_icons">
        <item>@drawable/ic_my_library_music_grey600_24dp</item>
        <item>@drawable/ic_radio_grey600_24dp</item>
    </string-array>

    // MainActivity tab titles
    <string-array name="local_music_tabs">
        <item>Songs</item>
        <item>Artists</item>
        <item>Albums</item>
        <item>Queue</item>
    </string-array>

    // Navigation Drawer titles
    <string-array name="wifi_signal_levels">
        <item>low</item>
        <item>medium</item>
        <item>good</item>
    </string-array>

    // Station chooser activity
    <string name="title_activity_station_chooser">Stations around</string>
    <string name="connecting_to_the_station">Connecting to the station...</string>
    <string name="wifi_disabled">Please turn on Wi-Fi</string>

    <string name="crash_toast_text">Sending crash report...</string>
    <string name="nobody_around">Nobody wants you to listen with him...</string>


    <string name="nothing_to_shuffle">There\'s nothing to shuffle</string>
    <string name="refresh">Refresh</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="format_ringtone">%s is now your new ringtone!</string>
    <string name="action_chat">Chat</string>
    <string name="pref_client_name_title">Name</string>
    <string name="pref_client_name_summary">This name will be shown to other users</string>
    <string name="pref_header_client">Client settings</string>
    <string name="chat_hint">Message</string>
    <string name="chat_activity_label">Chat</string>

    <string name="client_connected_format">%s connected</string>
    <string name="client_disconnected_format">%s disconnected</string>

    <string name="crouton_chat_message_format">%1$s: %2$s</string>
    <string name="play_next">Play next</string>
    <string name="donate">Donate</string>
    <string name="send_feedback">Send feedback</string>
    <string name="rate_app">Rate this app!</string>

    <string name="local_music">Local music</string>

</resources>
