<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:unified="http://schemas.android.com/apk/res-auto" >

    <header
        unified:up_fragment="com.lwm.app.ui.activity.PreferenceActivity$AccessPointSettingsFragment"
        unified:up_title="@string/pref_header_ap"
        unified:up_preferenceRes="@xml/pref_ap" />

    <header
        unified:up_fragment="com.lwm.app.ui.activity.PreferenceActivity$AppSettingsFragment"
        unified:up_title="@string/pref_header_app"
        unified:up_preferenceRes="@xml/pref_app" />

    <header
        unified:up_fragment="com.lwm.app.ui.activity.PreferenceActivity$AppSettingsFragment"
        unified:up_title="@string/pref_header_client"
        unified:up_preferenceRes="@xml/pref_client" />

</preference-headers>