<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lwm.app.ui.activity.LocalSongChooserActivity" >

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:icon="@drawable/ic_action_av_add_to_queue"
        android:id="@+id/action_add_to_queue"
        android:title="@string/action_add_to_queue"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_action_broadcast"
        android:id="@+id/action_broadcast"
        android:title="@string/action_broadcast"
        app:showAsAction="ifRoom" />

</menu>
