<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:orientation="vertical"
    android:background="@color/drawer_background"
    android:layout_gravity="start"
    android:layout_width="192dp"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/drawer_list"
        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/drawer_buttons"
        android:isScrollContainer="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:choiceMode="singleChoice"
        tools:listitem="@layout/list_item_drawer"/>

    <LinearLayout
        android:id="@+id/drawer_buttons"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.danh32.fontify.Button
            android:id="@+id/drawer_btn_donate"
            android:text="@string/donate"
            style="@style/DrawerBottomButton" />

        <com.danh32.fontify.Button
            android:id="@+id/drawer_btn_settings"
            android:text="@string/action_settings"
            style="@style/DrawerBottomButton" />

        <com.danh32.fontify.Button
            android:id="@+id/drawer_btn_send_feedback"
            android:text="@string/send_feedback"
            style="@style/DrawerBottomButton" />

    </LinearLayout>

</RelativeLayout>