<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fontify="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/header_overlay_shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/header_overlay_shadow" />

    <RelativeLayout
        android:id="@+id/info_line_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeeeee" >
        <LinearLayout
            android:id="@+id/songs_count_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <com.danh32.fontify.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#aa111111"
                android:layout_marginLeft="5dp"
                android:text="@string/songs_count_title"
                fontify:font="@string/FONT_ROBOTO_BOLD" />

            <com.danh32.fontify.TextView
                android:id="@+id/songs_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="#aa111111"
                fontify:font="@string/FONT_ROBOTO_BOLD" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/year_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true">

            <com.danh32.fontify.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_title"
                android:textColor="#aa111111"
                android:layout_marginLeft="5dp"
                fontify:font="@string/FONT_ROBOTO_BOLD" />

            <com.danh32.fontify.TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="#aa111111"
                fontify:font="@string/FONT_ROBOTO_BOLD" />

        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cccccc" />

</LinearLayout>